--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,24 @@
   text-align: center;
 }
 
+.Homepage {
+  background-image: url("../public/media/bgnotechat.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+i {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -32,6 +50,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
