--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,21 @@ i {
   height: 40vmin;
   pointer-events: none;
 }
+.chatpage-messages{
+  border: 1px solid #ccc;
+  flex: 1;
+  overflow-y: auto;
+  padding: 10;
+  background: #000;
+  min-height: 0;
+  max-height:80vh;
+  padding-top: 8;
+  width: 100%;
+  height:90%;
+  box-sizing:border-box;
+  overflow-x: hidden;
+  margin-bottom: 0;
+}
 .chat-messages{
   border: 1px solid #ccc;
   flex: 1;
@@ -40,7 +55,6 @@ i {
   overflow-x: hidden;
   margin-bottom: 0;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -86,10 +100,12 @@ i {
     height: calc(100vh  - env(safe-area-inset-bottom));
     min-height: 300px; /* Minimum height to prevent too small container */
   }
-  .chat-messages{
+  .chatpage-messages{
     max-height:85vh;
   }
-  
+  .chat-messages{
+    max-height: 70vh;
+  }
   .chat-input {
     padding: 10px;
   }
